--- a/tutorials/install_centos_rhel.html
+++ b/tutorials/install_centos_rhel.html
@@ -1,6 +1,6 @@
 ---
-redirect_from:
-  - /learn/install_centos_rhel/
+redirect_to:
+  - /intro-course/ex1.html
 layout: tutorial
 tutorial_modal: tutorial_modal_install.html
 title: Installing Mesosphere Packages on CentOS / RHEL
