--- a/tutorials/install_ubuntu_debian.html
+++ b/tutorials/install_ubuntu_debian.html
@@ -1,6 +1,6 @@
 ---
-redirect_from:
-  - /learn/install_ubuntu_debian/
+redirect_to:
+  - /intro-course/ex1.html
 layout: tutorial
 tutorial_modal: tutorial_modal_install.html
 title: Installing Mesosphere Packages on Ubuntu / Debian
