--- a/tutorials/run-chronos-on-mesos.html
+++ b/tutorials/run-chronos-on-mesos.html
@@ -1,6 +1,6 @@
 ---
-redirect_from:
-  - /learn/run-chronos-on-mesos/
+redirect_to:
+  - /intro-course/ex8.html
 layout: tutorial
 title: How to run Chronos on Apache Mesos
 tutorial_icon_classname: tutorial-icon-chronos
