--- a/tutorials/run-services-with-marathon.html
+++ b/tutorials/run-services-with-marathon.html
@@ -1,6 +1,6 @@
 ---
-redirect_from:
-  - /learn/run-services-with-marathon/
+redirect_to:
+  - /intro-course/ex4.html
 layout: tutorial
 title: Run Services with Marathon
 tutorial_icon_classname: tutorial-icon-marathon
