--- a/intro-course/ex13.html
+++ b/intro-course/ex13.html
@@ -155,7 +155,9 @@ instruct it to run more than one node.</p>
     </div>
     <footer class=" ">
         <div class="container">
-            <div class="row">
+            <p align="center"><span class="text-muted"><a href="/support/" target="_blank">Support and feedback</a> | <a href="https://mesosphere.com/terms/" target="_blank">Terms of service</a> | <a href="https://mesosphere.com/privacy/" target="_blank">Privacy Policy</a> </span>
+            <p align="center"><span class="text-muted">&copy; 2015 Mesosphere, Inc. All Rights Reserved.</span>
+            <!-- div class="row">
                 <div class="col-sm-3">
                     <ul class="list-unstyled">
                         <li><a href="http://mesosphere.com/team/">Team</a>
@@ -175,7 +177,7 @@ instruct it to run more than one node.</p>
                         <li><span class="text-muted">&copy; 2015 Mesosphere, Inc.</span>
                     </ul>
                 </div>
-            </div>
+            </div -->
         </div>
     </footer>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
