--- a/intro-course/ex9.html
+++ b/intro-course/ex9.html
@@ -169,7 +169,9 @@ properly set to start on boot with <tt class="docutils literal">chkconfig</tt>:<
     </div>
     <footer class=" ">
         <div class="container">
-            <div class="row">
+            <p align="center"><span class="text-muted"><a href="/support/" target="_blank">Support and feedback</a> | <a href="https://mesosphere.com/terms/" target="_blank">Terms of service</a> | <a href="https://mesosphere.com/privacy/" target="_blank">Privacy Policy</a> </span>
+            <p align="center"><span class="text-muted">&copy; 2015 Mesosphere, Inc. All Rights Reserved.</span>
+            <!-- div class="row">
                 <div class="col-sm-3">
                     <ul class="list-unstyled">
                         <li><a href="http://mesosphere.com/team/">Team</a>
@@ -189,7 +191,7 @@ properly set to start on boot with <tt class="docutils literal">chkconfig</tt>:<
                         <li><span class="text-muted">&copy; 2015 Mesosphere, Inc.</span>
                     </ul>
                 </div>
-            </div>
+            </div -->
         </div>
     </footer>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
