Fixed header issue

--- a/intro-course/ex19.html
+++ b/intro-course/ex19.html
@@ -1,26 +1,5 @@
 
-Skip to content
-This repository
-
-Pull requests
-Issues
-Gist
-
-@joel-hamill
-
-72
-2
-
-0
-
-mesosphere/dcos-intro-course private
-
-dcos-intro-course/template.html
-@joel-hamill joel-hamill 2 hours ago Removed Disqus
-
-1 contributor
-146 lines (123 sloc) 9.239 kB
-<!DOCTYPE html>
+<html>
 <head>
     <title>Mesosphere - Exercise 19: Troubleshooting</title>
     <meta name="title" content ="Mesosphere Documentation Intro Course">
@@ -236,8 +215,4 @@ on.  The Marathon messages are no longer mixed together with Mesos and Chronos e
 </body>
 
 </html>
-
-Status API Training Shop Blog About Help
-
-© 2015 GitHub, Inc. Terms Privacy Security Contact
 
