--- a/intro-course/ex3.html
+++ b/intro-course/ex3.html
@@ -1,26 +1,5 @@
 
-Skip to content
-This repository
-
-Pull requests
-Issues
-Gist
-
-@joel-hamill
-
-72
-2
-
-0
-
-mesosphere/dcos-intro-course private
-
-dcos-intro-course/template.html
-@joel-hamill joel-hamill 2 hours ago Removed Disqus
-
-1 contributor
-146 lines (123 sloc) 9.239 kB
-<!DOCTYPE html>
+<html>
 <head>
     <title>Mesosphere - Exercise 3: Using Apache Mesos</title>
     <meta name="title" content ="Mesosphere Documentation Intro Course">
@@ -210,8 +189,4 @@ Edit your /etc/hosts file to set node1 to the IP address 192.168.33.10.</p>
 </body>
 
 </html>
-
-Status API Training Shop Blog About Help
-
-© 2015 GitHub, Inc. Terms Privacy Security Contact
 
