--- a/intro-course/ex1.html
+++ b/intro-course/ex1.html
@@ -1,26 +1,5 @@
 
-Skip to content
-This repository
-
-Pull requests
-Issues
-Gist
-
-@joel-hamill
-
-72
-2
-
-0
-
-mesosphere/dcos-intro-course private
-
-dcos-intro-course/template.html
-@joel-hamill joel-hamill 2 hours ago Removed Disqus
-
-1 contributor
-146 lines (123 sloc) 9.239 kB
-<!DOCTYPE html>
+<html>
 <head>
     <title>Mesosphere - Exercise 1: Installing Software</title>
     <meta name="title" content ="Mesosphere Documentation Intro Course">
@@ -221,8 +200,4 @@ Create a virtual machine with Vagrant running the CentOS 7.0 Linux distro. This 
 </body>
 
 </html>
-
-Status API Training Shop Blog About Help
-
-© 2015 GitHub, Inc. Terms Privacy Security Contact
 
