--- a/intro-course/ex17.html
+++ b/intro-course/ex17.html
@@ -1,26 +1,5 @@
 
-Skip to content
-This repository
-
-Pull requests
-Issues
-Gist
-
-@joel-hamill
-
-72
-2
-
-0
-
-mesosphere/dcos-intro-course private
-
-dcos-intro-course/template.html
-@joel-hamill joel-hamill 2 hours ago Removed Disqus
-
-1 contributor
-146 lines (123 sloc) 9.239 kB
-<!DOCTYPE html>
+<html>
 <head>
     <title>Mesosphere - Exercise 17: Advanced Usage of the Marathon</title>
     <meta name="title" content ="Mesosphere Documentation Intro Course">
@@ -295,8 +274,4 @@ curl -X DELETE http://192.168.33.10:8080/v2/apps/webapp/tasks
 </body>
 
 </html>
-
-Status API Training Shop Blog About Help
-
-© 2015 GitHub, Inc. Terms Privacy Security Contact
 
