--- a/intro-course/intro.html
+++ b/intro-course/intro.html
@@ -118,16 +118,14 @@ can copy and paste them when trying to replicate what the video did, although yo
 you get used to working with the tools.</li>
 <li>Homework for you to do before moving on.  The homework should be short and related to the lecture, but
 it might involve more work depending on your skills and what's necessary for the exercise.</li>
-<li>Finally, a Disqus comments section where you can ask questions and also read responses to other people's questions.</li>
 </ol>
 <p>To complete the course you simply start at Exercise 1 and do each exercise in
 order, watching the lectures and completing the homework.  When you're done
-you'll have a very solid understanding of everything in the Mesosphere stack and should be able to
+you'll have a very solid understanding of everything in the Mesos and should be able to
 build your own deployments and applications with it.</p>
 </div>
 <div class="section" id="getting-help">
 <h1>Getting Help</h1>
-<p>At the bottom of every exercise is a Disqus comments block that you can use to ask any questions you have.  As this is an initial release of the courses we're fully expecting to find bugs, problems in versions of software, and simply errors in the teaching.  Post any and all problems you run into, preferably with links to screenshots.</p>
 <p>To keep thing simple, please stick to the 7.0 version of CentOS being used in the exercises.  While you may have a more preferred version of Linux, educational goals mean we have to standardize on one and use that to teach.  After you complete the course you should be able to extrapolate this information to any version of Linux you prefer.</p>
 </div>
                 <!-- RST ENDS -->
