Fixed support URL

--- a/intro-course/ex3.html
+++ b/intro-course/ex3.html
@@ -157,7 +157,7 @@ Edit your /etc/hosts file to set node1 to the IP address 192.168.33.10.</p>
     </div>
     <footer class=" ">
         <div class="container">
-            <p align="center"><span class="text-muted"><a href="/support/" target="_blank">Support and feedback</a> | <a href="https://mesosphere.com/terms/" target="_blank">Terms of service</a> | <a href="https://mesosphere.com/privacy/" target="_blank">Privacy Policy</a> </span>
+            <p align="center"><span class="text-muted"><a href="http://docs.mesosphere.com/support/" target="_blank">Support and feedback</a> | <a href="https://mesosphere.com/terms/" target="_blank">Terms of service</a> | <a href="https://mesosphere.com/privacy/" target="_blank">Privacy Policy</a> </span>
             <p align="center"><span class="text-muted">&copy; 2015 Mesosphere, Inc. All Rights Reserved.</span>
                 <!-- div class="row">
                     <div class="col-sm-3">
