--- a/intro-course/ex1.html
+++ b/intro-course/ex1.html
@@ -168,7 +168,7 @@ Create a virtual machine with Vagrant running the CentOS 7.0 Linux distro. This 
     </div>
     <footer class=" ">
         <div class="container">
-            <p align="center"><span class="text-muted"><a href="/support/" target="_blank">Support and feedback</a> | <a href="https://mesosphere.com/terms/" target="_blank">Terms of service</a> | <a href="https://mesosphere.com/privacy/" target="_blank">Privacy Policy</a> </span>
+            <p align="center"><span class="text-muted"><a href="http://docs.mesosphere.com/support/" target="_blank">Support and feedback</a> | <a href="https://mesosphere.com/terms/" target="_blank">Terms of service</a> | <a href="https://mesosphere.com/privacy/" target="_blank">Privacy Policy</a> </span>
             <p align="center"><span class="text-muted">&copy; 2015 Mesosphere, Inc. All Rights Reserved.</span>
                 <!-- div class="row">
                     <div class="col-sm-3">
