--- a/intro-course/ex15.html
+++ b/intro-course/ex15.html
@@ -189,7 +189,7 @@ file in the <tt class="docutils literal"><span class="pre">vm-install</span></tt
     </div>
     <footer class=" ">
         <div class="container">
-            <p align="center"><span class="text-muted"><a href="/support/" target="_blank">Support and feedback</a> | <a href="https://mesosphere.com/terms/" target="_blank">Terms of service</a> | <a href="https://mesosphere.com/privacy/" target="_blank">Privacy Policy</a> </span>
+            <p align="center"><span class="text-muted"><a href="http://docs.mesosphere.com/support/" target="_blank">Support and feedback</a> | <a href="https://mesosphere.com/terms/" target="_blank">Terms of service</a> | <a href="https://mesosphere.com/privacy/" target="_blank">Privacy Policy</a> </span>
             <p align="center"><span class="text-muted">&copy; 2015 Mesosphere, Inc. All Rights Reserved.</span>
                 <!-- div class="row">
                     <div class="col-sm-3">
