--- a/intro-course/ex7.html
+++ b/intro-course/ex7.html
@@ -199,7 +199,7 @@ Validate that you can see the host command starts working again:</p>
     </div>
     <footer class=" ">
         <div class="container">
-            <p align="center"><span class="text-muted"><a href="/support/" target="_blank">Support and feedback</a> | <a href="https://mesosphere.com/terms/" target="_blank">Terms of service</a> | <a href="https://mesosphere.com/privacy/" target="_blank">Privacy Policy</a> </span>
+            <p align="center"><span class="text-muted"><a href="http://docs.mesosphere.com/support/" target="_blank">Support and feedback</a> | <a href="https://mesosphere.com/terms/" target="_blank">Terms of service</a> | <a href="https://mesosphere.com/privacy/" target="_blank">Privacy Policy</a> </span>
             <p align="center"><span class="text-muted">&copy; 2015 Mesosphere, Inc. All Rights Reserved.</span>
                 <!-- div class="row">
                     <div class="col-sm-3">
