--- a/tutorials/run-spark-on-mesos.html
+++ b/tutorials/run-spark-on-mesos.html
@@ -136,7 +136,7 @@ steps:
       Download and inflate the Spark tarball for the latest stable version
     icon: fa-cloud-download
     blackboard: >
-      <pre class="terminal"><code>ubuntu:~$ wget http://d3kbcqa49mib13.cloudfront.net/spark-0.8.0-incubating.tgz
+      <pre class="terminal"><code>ubuntu:~$ wget https://d3kbcqa49mib13.cloudfront.net/spark-0.8.0-incubating.tgz
 
       --2013-11-09 00:29:49--  http://d3kbcqa49mib13.cloudfront.net/spark-0.8.0-incubating.tgz
 
@@ -173,7 +173,7 @@ steps:
 
     instruction: >
       <p>Now we're ready to download Spark, based on the instructions given on its <a href="http://spark.incubator.apache.org/documentation.html" target="_blank">documentation page</a>.</p>
-      <p>Use <code>wget</code> to pull down the tarball for the stable version, which is <b>0.8.0</b> in this case: <pre data-code class="clear"><code class="codeblock">wget http://d3kbcqa49mib13.cloudfront.net/spark-0.8.0-incubating.tgz</code></pre></p>
+      <p>Use <code>wget</code> to pull down the tarball for the stable version, which is <b>0.8.0</b> in this case: <pre data-code class="clear"><code class="codeblock">wget https://d3kbcqa49mib13.cloudfront.net/spark-0.8.0-incubating.tgz</code></pre></p>
       <p>Then inflate the tarball: <pre data-code class="clear"><code class="codeblock">tar xzf spark-0.8.0-incubating.tgz</code></pre></p>
       <p>Next, connect into the newly created directory for the Spark distribution: <pre data-code class="clear"><code class="codeblock">cd spark-0.8.0-incubating/</code></pre></p>
   - title: Build Spark
