--- a/tutorials/run-storm-on-mesos.html
+++ b/tutorials/run-storm-on-mesos.html
@@ -48,7 +48,7 @@ steps:
     icon: fa-expand
     blackboard: >
       <pre class="terminal"><code>
-       ubuntu@ec2-54-196-104-180:~$ wget http://downloads.mesosphere.io/storm/storm-mesos-0.9.tgz
+       ubuntu@ec2-54-196-104-180:~$ wget https://downloads.mesosphere.io/storm/storm-mesos-0.9.tgz
         --2013-12-10 00:50:49--  http://downloads.mesosphere.io/storm/storm-mesos-0.9.tgz
         Resolving downloads.mesosphere.io (downloads.mesosphere.io)... 176.32.102.97
         Connecting to downloads.mesosphere.io (downloads.mesosphere.io)|176.32.102.97|:80... connected.
@@ -63,7 +63,7 @@ steps:
       </code></pre>
     instruction: >
       <p>Now, download the public tar archive for Storm.</p>
-      <pre data-code><code class="codeblock">wget http://downloads.mesosphere.io/storm/storm-mesos-0.9.tgz</code></pre>
+      <pre data-code><code class="codeblock">wget https://downloads.mesosphere.io/storm/storm-mesos-0.9.tgz</code></pre>
       <p>Then unpack it and change into the unpacked directory.</p>
       <pre data-code><code class="codeblock">tar xzf ./storm-mesos-0.9.tgz &amp;&amp; cd storm-mesos-0.9</code></pre>
   - title: Match your cluster configuration settings
@@ -154,7 +154,7 @@ steps:
     blackboard: >
       <pre class="terminal"><code>
           ubuntu@ec2-54-196-104-180:~/storm-mesos-0.9$ cd ~
-          ubuntu@ec2-54-196-104-180:~$ wget http://downloads.mesosphere.io/storm/storm-starter-0.0.1-SNAPSHOT.jar
+          ubuntu@ec2-54-196-104-180:~$ wget https://downloads.mesosphere.io/storm/storm-starter-0.0.1-SNAPSHOT.jar
           --2013-12-10 01:01:14--  http://downloads.mesosphere.io/storm/storm-starter-0.0.1-SNAPSHOT.jar
           Resolving downloads.mesosphere.io (downloads.mesosphere.io)... 205.251.243.169
           Connecting to downloads.mesosphere.io (downloads.mesosphere.io)|205.251.243.169|:80... connected.
@@ -176,7 +176,7 @@ steps:
       <p>
       <pre data-code><code class="codeblock">
         cd ~
-        wget http://downloads.mesosphere.io/storm/storm-starter-0.0.1-SNAPSHOT.jar
+        wget https://downloads.mesosphere.io/storm/storm-starter-0.0.1-SNAPSHOT.jar
         cd storm-mesos-0.9
       </code></pre>
       </p>
