--- a/tutorials/run-chronos-on-mesos.html
+++ b/tutorials/run-chronos-on-mesos.html
@@ -47,7 +47,7 @@ steps:
       Download the Chronos package and untar it
     icon: fa-cloud-download
     blackboard: >
-      <pre class="terminal"><code>ubuntu:~$ curl -sSfL http://downloads.mesosphere.io/chronos/chronos-2.1.0_mesos-0.14.0-rc4.tgz --output chronos.tgz
+      <pre class="terminal"><code>ubuntu:~$ curl -sSfL https://downloads.mesosphere.io/chronos/chronos-2.1.0_mesos-0.14.0-rc4.tgz --output chronos.tgz
 
       ubuntu:~$ tar xzf chronos.tgz
 
@@ -57,7 +57,7 @@ steps:
       </code></pre>
     instruction: >
       <p>Now, download the public tar archive for Chronos.</p>
-      <pre data-code><code class="codeblock">curl -sSfL http://downloads.mesosphere.io/chronos/chronos-2.1.0_mesos-0.14.0-rc4.tgz --output chronos.tgz</code></pre>
+      <pre data-code><code class="codeblock">curl -sSfL https://downloads.mesosphere.io/chronos/chronos-2.1.0_mesos-0.14.0-rc4.tgz --output chronos.tgz</code></pre>
       <p>Then unpack it and change to the unpacked directory.</p>
       <pre data-code><code class="codeblock">tar xzf chronos.tgz &amp;&amp; cd chronos</code></pre>
       <p>If you don't want to download the tar archive, you can use <code>git</code> to clone the repo from <a href="https://github.com/airbnb/chronos">Github</a> and follow the build instructions.</p>
