--- a/error/404.html
+++ b/error/404.html
@@ -148,7 +148,7 @@
         </div>
         <div class="col-xs-8">
           <h1><div id="title">Oops! This page doesn't exist.</div></h1>
-          <p class="lead"><div id="msg">If you think there should be a page here, please contact us through one of our <a href='https://docs.mesosphere.com/support/'>support channels</a>.</div></p>
+          <p class="lead"><div id="msg">Please see the latest information at <a href="https://dcos.io/docs">dcos.io/</a>.</div></p>
         </div>
       </div>
     </div>
